# spl_validator

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  REVIEW.md  __init__.py  __main__.py  core.py  pyproject.toml  validator.py
.github/workflows/: browser-extension.yml  ci.yml
browser_extension/: .gitignore  README.md  manifest.json  options.html  options.js  package-lock.json  package.json  playwright.config.mjs  popup.css  popup.html  popup.js
browser_extension/e2e/: extension.spec.mjs
browser_extension/scripts/: build.mjs  check-dist.mjs
browser_extension/src/: background.js  manifest.json  options.html  popup.html
browser_extension/test/: api.test.mjs
docs/: scalability.md  security_audit.md  security_content_23_invalid_analysis.md  security_content_validation.md  typescript_development.md
docs/contract/: cli-json-output.schema.json
spl_validator/: __main__.py  cli_config.py  contract.py  core.py  httpd.py  json_payload.py  tui.py  tui_app.py  validator.py  web_ui.py
spl_validator/examples/: defaults.example.yaml
spl_validator/registry_packs/: example_pack.yaml
spl_validator/tools/: __init__.py  (+1 more)
src/: __init__.py
tests/: test_basic.py  test_cli_io.py  test_command_syntax.py  test_contract.py  test_edge_cases.py  test_functions_registry.py  test_golden.py  test_interfaces.py  test_parser.py  test_registry_pack.py  test_security_content_scan.py
tools/: run_browser_extension_e2e.sh  scan_external_detections.py  setup_environment.sh  validate_detections.py
typescript/: package-lock.json  package.json
(+88 files in other folders)
