[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spl-validator"
version = "0.1.0"
description = "Lightweight validator for Splunk Enterprise 10.0 SPL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jsonschema>=4.0",
]
tui = [
    "textual>=0.47.0",
]

[project.scripts]
spl-validator = "spl_validator.validator:main"
spl-validator-httpd = "spl_validator.httpd:main"
spl-validator-tui = "spl_validator.tui_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spl_validator*"]
